--- a/Practica1/Views/Shared/_Layout.cshtml
+++ b/Practica1/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Customer" asp-action="Index">Customer</a></li>
+
+                    <li><a asp-area="" asp-controller="Product" asp-action="Index">Product</a></li>
                 </ul>
             </div>
         </div>
